add User-Agent and rate limit checking

--- a/checker.ipynb
+++ b/checker.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "ac858fcd",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "bba5c306",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "6        5            Hedingen"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,20 +316,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "30d17e08",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
+    "import time\n",
     "\n",
-    "def query_wikidata(query: str) -> pd.DataFrame:\n",
+    "def query_wikidata(query: str, max_retries: int = 5) -> pd.DataFrame:\n",
     "    \n",
+    "    headers = {\n",
+    "    \"User-Agent\": \"agvch-checker (https://github.com/bequrios/agvch-checker; mailto:bhitz@gmx.net)\"}\n",
+    "\n",
     "    url = \"https://query.wikidata.org/sparql\"\n",
-    "    response = requests.get(url, params={\"query\": query, \"format\": \"json\"})\n",
-    "    data = response.json()\n",
-    "    df = pd.json_normalize(data[\"results\"][\"bindings\"])\n",
-    "    return df"
+    "    \n",
+    "    for attempt in range(max_retries):\n",
+    "    \n",
+    "        response = requests.get(url, params={\"query\": query, \"format\": \"json\"}, headers=headers)\n",
+    "\n",
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            return pd.json_normalize(data[\"results\"][\"bindings\"])\n",
+    "        \n",
+    "        elif response.status_code == 429:\n",
+    "            # too many requests — check Retry-After header\n",
+    "            retry_after = int(response.headers.get(\"Retry-After\", \"5\"))\n",
+    "            print(f\"Rate limited. Waiting {retry_after} seconds before retrying...\")\n",
+    "            time.sleep(retry_after)\n",
+    "        \n",
+    "        else:\n",
+    "            # some other error, stop\n",
+    "            response.raise_for_status()\n",
+    "    \n",
+    "    raise Exception(\"Max retries exceeded\")"
    ]
   },
   {
@@ -342,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "95ef97ad",
    "metadata": {},
    "outputs": [
@@ -394,52 +414,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66598</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q65889</td>\n",
        "      <td>de-ch</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Rifferswil</td>\n",
+       "      <td>Wegenstetten</td>\n",
        "      <td>literal</td>\n",
-       "      <td>12</td>\n",
+       "      <td>4262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66601</td>\n",
-       "      <td>de-ch</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q65895</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Wattwil</td>\n",
-       "      <td>literal</td>\n",
-       "      <td>3379</td>\n",
+       "      <td>872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66604</td>\n",
-       "      <td>de-ch</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q65903</td>\n",
+       "      <td>und</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Risch</td>\n",
+       "      <td>Lauenen</td>\n",
        "      <td>literal</td>\n",
-       "      <td>1707</td>\n",
+       "      <td>842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66611</td>\n",
-       "      <td>und</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q65907</td>\n",
+       "      <td>de-ch</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Oberhofen am Thunersee</td>\n",
+       "      <td>Thalheim (AG)</td>\n",
        "      <td>literal</td>\n",
-       "      <td>934</td>\n",
+       "      <td>4117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q66613</td>\n",
-       "      <td>und</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q65909</td>\n",
+       "      <td>de-ch</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Gurzelen</td>\n",
+       "      <td>Wallbach</td>\n",
        "      <td>literal</td>\n",
-       "      <td>867</td>\n",
+       "      <td>4261</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -447,21 +467,21 @@
       ],
       "text/plain": [
        "  muni.type                             muni.value name.xml:lang name.type  \\\n",
-       "0       uri  http://www.wikidata.org/entity/Q66598         de-ch   literal   \n",
-       "1       uri  http://www.wikidata.org/entity/Q66601         de-ch   literal   \n",
-       "2       uri  http://www.wikidata.org/entity/Q66604         de-ch   literal   \n",
-       "3       uri  http://www.wikidata.org/entity/Q66611           und   literal   \n",
-       "4       uri  http://www.wikidata.org/entity/Q66613           und   literal   \n",
+       "0       uri  http://www.wikidata.org/entity/Q65889         de-ch   literal   \n",
+       "1       uri  http://www.wikidata.org/entity/Q65895           NaN       NaN   \n",
+       "2       uri  http://www.wikidata.org/entity/Q65903           und   literal   \n",
+       "3       uri  http://www.wikidata.org/entity/Q65907         de-ch   literal   \n",
+       "4       uri  http://www.wikidata.org/entity/Q65909         de-ch   literal   \n",
        "\n",
-       "               name.value bfs.type bfs.value  \n",
-       "0              Rifferswil  literal        12  \n",
-       "1                 Wattwil  literal      3379  \n",
-       "2                   Risch  literal      1707  \n",
-       "3  Oberhofen am Thunersee  literal       934  \n",
-       "4                Gurzelen  literal       867  "
+       "      name.value bfs.type bfs.value  \n",
+       "0   Wegenstetten  literal      4262  \n",
+       "1            NaN  literal       872  \n",
+       "2        Lauenen  literal       842  \n",
+       "3  Thalheim (AG)  literal      4117  \n",
+       "4       Wallbach  literal      4261  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "58634e88",
    "metadata": {},
    "outputs": [
@@ -538,58 +558,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Q66598</td>\n",
-       "      <td>Rifferswil</td>\n",
+       "      <td>Q65889</td>\n",
+       "      <td>Wegenstetten</td>\n",
        "      <td>de-ch</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
+       "      <td>4262</td>\n",
+       "      <td>4262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Q66601</td>\n",
-       "      <td>Wattwil</td>\n",
-       "      <td>de-ch</td>\n",
-       "      <td>3379</td>\n",
-       "      <td>3379</td>\n",
+       "      <td>Q65895</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>872</td>\n",
+       "      <td>872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Q66604</td>\n",
-       "      <td>Risch</td>\n",
-       "      <td>de-ch</td>\n",
-       "      <td>1707</td>\n",
-       "      <td>1707</td>\n",
+       "      <td>Q65903</td>\n",
+       "      <td>Lauenen</td>\n",
+       "      <td>und</td>\n",
+       "      <td>842</td>\n",
+       "      <td>842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q66611</td>\n",
-       "      <td>Oberhofen am Thunersee</td>\n",
-       "      <td>und</td>\n",
-       "      <td>934</td>\n",
-       "      <td>934</td>\n",
+       "      <td>Q65907</td>\n",
+       "      <td>Thalheim (AG)</td>\n",
+       "      <td>de-ch</td>\n",
+       "      <td>4117</td>\n",
+       "      <td>4117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Q66613</td>\n",
-       "      <td>Gurzelen</td>\n",
-       "      <td>und</td>\n",
-       "      <td>867</td>\n",
-       "      <td>867</td>\n",
+       "      <td>Q65909</td>\n",
+       "      <td>Wallbach</td>\n",
+       "      <td>de-ch</td>\n",
+       "      <td>4261</td>\n",
+       "      <td>4261</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        q                    name   lang   bfs  bfsInt\n",
-       "0  Q66598              Rifferswil  de-ch    12      12\n",
-       "1  Q66601                 Wattwil  de-ch  3379    3379\n",
-       "2  Q66604                   Risch  de-ch  1707    1707\n",
-       "3  Q66611  Oberhofen am Thunersee    und   934     934\n",
-       "4  Q66613                Gurzelen    und   867     867"
+       "        q           name   lang   bfs  bfsInt\n",
+       "0  Q65889   Wegenstetten  de-ch  4262    4262\n",
+       "1  Q65895            NaN    NaN   872     872\n",
+       "2  Q65903        Lauenen    und   842     842\n",
+       "3  Q65907  Thalheim (AG)  de-ch  4117    4117\n",
+       "4  Q65909       Wallbach  de-ch  4261    4261"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "170e16ed",
    "metadata": {},
    "outputs": [
@@ -757,7 +777,7 @@
        "4   both    True   True  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "b6c000fa",
    "metadata": {},
    "outputs": [
@@ -839,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "6da86d92",
    "metadata": {},
    "outputs": [
@@ -923,7 +943,7 @@
        "4  http://www.w3.org/2001/XMLSchema#integer         literal             10459"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "2fe5faa5",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1041,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "bafad9f7",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1125,7 @@
        "0  http://www.w3.org/2001/XMLSchema#integer    literal           5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "0ad1a4fb",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1201,7 @@
        "0  http://www.w3.org/2001/XMLSchema#integer    literal           2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "d936e9e7",
    "metadata": {},
    "outputs": [],
