LINDAS Next endpoint

--- a/checker.ipynb
+++ b/checker.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "ac858fcd",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "bba5c306",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "6        5            Hedingen"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "30d17e08",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "95ef97ad",
    "metadata": {},
    "outputs": [
@@ -414,52 +414,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q65889</td>\n",
-       "      <td>de-ch</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66924</td>\n",
+       "      <td>und</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Wegenstetten</td>\n",
+       "      <td>Zäziwil</td>\n",
        "      <td>literal</td>\n",
-       "      <td>4262</td>\n",
+       "      <td>628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q65895</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66928</td>\n",
+       "      <td>de</td>\n",
        "      <td>literal</td>\n",
-       "      <td>872</td>\n",
+       "      <td>Seedorf</td>\n",
+       "      <td>literal</td>\n",
+       "      <td>312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q65903</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66935</td>\n",
        "      <td>und</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Lauenen</td>\n",
+       "      <td>La Brillaz</td>\n",
        "      <td>literal</td>\n",
-       "      <td>842</td>\n",
+       "      <td>2234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q65907</td>\n",
-       "      <td>de-ch</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66932</td>\n",
+       "      <td>und</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Thalheim (AG)</td>\n",
+       "      <td>Zuzwil (BE)</td>\n",
        "      <td>literal</td>\n",
-       "      <td>4117</td>\n",
+       "      <td>557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q65909</td>\n",
-       "      <td>de-ch</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q66938</td>\n",
+       "      <td>fr</td>\n",
        "      <td>literal</td>\n",
-       "      <td>Wallbach</td>\n",
+       "      <td>Champoz</td>\n",
        "      <td>literal</td>\n",
-       "      <td>4261</td>\n",
+       "      <td>683</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -467,21 +467,21 @@
       ],
       "text/plain": [
        "  muni.type                             muni.value name.xml:lang name.type  \\\n",
-       "0       uri  http://www.wikidata.org/entity/Q65889         de-ch   literal   \n",
-       "1       uri  http://www.wikidata.org/entity/Q65895           NaN       NaN   \n",
-       "2       uri  http://www.wikidata.org/entity/Q65903           und   literal   \n",
-       "3       uri  http://www.wikidata.org/entity/Q65907         de-ch   literal   \n",
-       "4       uri  http://www.wikidata.org/entity/Q65909         de-ch   literal   \n",
+       "0       uri  http://www.wikidata.org/entity/Q66924           und   literal   \n",
+       "1       uri  http://www.wikidata.org/entity/Q66928            de   literal   \n",
+       "2       uri  http://www.wikidata.org/entity/Q66935           und   literal   \n",
+       "3       uri  http://www.wikidata.org/entity/Q66932           und   literal   \n",
+       "4       uri  http://www.wikidata.org/entity/Q66938            fr   literal   \n",
        "\n",
-       "      name.value bfs.type bfs.value  \n",
-       "0   Wegenstetten  literal      4262  \n",
-       "1            NaN  literal       872  \n",
-       "2        Lauenen  literal       842  \n",
-       "3  Thalheim (AG)  literal      4117  \n",
-       "4       Wallbach  literal      4261  "
+       "    name.value bfs.type bfs.value  \n",
+       "0      Zäziwil  literal       628  \n",
+       "1      Seedorf  literal       312  \n",
+       "2   La Brillaz  literal      2234  \n",
+       "3  Zuzwil (BE)  literal       557  \n",
+       "4      Champoz  literal       683  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "58634e88",
    "metadata": {},
    "outputs": [
@@ -558,58 +558,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Q65889</td>\n",
-       "      <td>Wegenstetten</td>\n",
-       "      <td>de-ch</td>\n",
-       "      <td>4262</td>\n",
-       "      <td>4262</td>\n",
+       "      <td>Q66924</td>\n",
+       "      <td>Zäziwil</td>\n",
+       "      <td>und</td>\n",
+       "      <td>628</td>\n",
+       "      <td>628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Q65895</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>872</td>\n",
-       "      <td>872</td>\n",
+       "      <td>Q66928</td>\n",
+       "      <td>Seedorf</td>\n",
+       "      <td>de</td>\n",
+       "      <td>312</td>\n",
+       "      <td>312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Q65903</td>\n",
-       "      <td>Lauenen</td>\n",
+       "      <td>Q66935</td>\n",
+       "      <td>La Brillaz</td>\n",
        "      <td>und</td>\n",
-       "      <td>842</td>\n",
-       "      <td>842</td>\n",
+       "      <td>2234</td>\n",
+       "      <td>2234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Q65907</td>\n",
-       "      <td>Thalheim (AG)</td>\n",
-       "      <td>de-ch</td>\n",
-       "      <td>4117</td>\n",
-       "      <td>4117</td>\n",
+       "      <td>Q66932</td>\n",
+       "      <td>Zuzwil (BE)</td>\n",
+       "      <td>und</td>\n",
+       "      <td>557</td>\n",
+       "      <td>557</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Q65909</td>\n",
-       "      <td>Wallbach</td>\n",
-       "      <td>de-ch</td>\n",
-       "      <td>4261</td>\n",
-       "      <td>4261</td>\n",
+       "      <td>Q66938</td>\n",
+       "      <td>Champoz</td>\n",
+       "      <td>fr</td>\n",
+       "      <td>683</td>\n",
+       "      <td>683</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        q           name   lang   bfs  bfsInt\n",
-       "0  Q65889   Wegenstetten  de-ch  4262    4262\n",
-       "1  Q65895            NaN    NaN   872     872\n",
-       "2  Q65903        Lauenen    und   842     842\n",
-       "3  Q65907  Thalheim (AG)  de-ch  4117    4117\n",
-       "4  Q65909       Wallbach  de-ch  4261    4261"
+       "        q         name lang   bfs  bfsInt\n",
+       "0  Q66924      Zäziwil  und   628     628\n",
+       "1  Q66928      Seedorf   de   312     312\n",
+       "2  Q66935   La Brillaz  und  2234    2234\n",
+       "3  Q66932  Zuzwil (BE)  und   557     557\n",
+       "4  Q66938      Champoz   fr   683     683"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "170e16ed",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "4   both    True   True  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "b6c000fa",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_merge': {'both': 2126, 'wiki_only': 23, 'official_only': 0}, '_nameOk': {True: 1991, False: 158}, '_bfsOk': {True: 2146, False: 3}, '_bfsIntUnique': False, '_BfsCodeUnique': False, '_bfsIntNonUniqueValues': [351, None, 782, 1331, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644], '_BfsCodeNonUniqueValues': [351, 782, 1331, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644, None]}\n"
+      "{'_merge': {'both': 2119, 'wiki_only': 24, 'official_only': 1}, '_nameOk': {True: 1991, False: 153}, '_bfsOk': {True: 2139, False: 5}, '_bfsIntUnique': False, '_BfsCodeUnique': False, '_bfsIntNonUniqueValues': [None, 782, 1331, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644], '_BfsCodeNonUniqueValues': [782, 1331, None, 2196, 2275, 3291, 6266, 6289, 6630, 6634, 6644]}\n"
      ]
     }
    ],
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "6da86d92",
    "metadata": {},
    "outputs": [
@@ -943,14 +943,14 @@
        "4  http://www.w3.org/2001/XMLSchema#integer         literal             10459"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Endpoint URL\n",
-    "url = \"https://ld.admin.ch/query\"\n",
+    "url = \"https://lindas.int.cz-aws.net/query\"\n",
     "\n",
     "headers = {\n",
     "    \"Accept\": \"application/sparql-results+json\"\n",
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "2fe5faa5",
    "metadata": {},
    "outputs": [
@@ -1031,17 +1031,55 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>743</th>\n",
+       "      <td>16671</td>\n",
+       "      <td>2262</td>\n",
+       "      <td>01.01.2026</td>\n",
+       "      <td>Gurmels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>828</th>\n",
+       "      <td>16670</td>\n",
+       "      <td>2056</td>\n",
+       "      <td>01.01.2026</td>\n",
+       "      <td>Fétigny-Ménières</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>943</th>\n",
+       "      <td>16672</td>\n",
+       "      <td>2525</td>\n",
+       "      <td>01.01.2026</td>\n",
+       "      <td>Kriegstetten</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1446</th>\n",
+       "      <td>16673</td>\n",
+       "      <td>4095</td>\n",
+       "      <td>01.01.2026</td>\n",
+       "      <td>Brugg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2279</th>\n",
+       "      <td>16669</td>\n",
+       "      <td>6831</td>\n",
+       "      <td>01.01.2026</td>\n",
+       "      <td>Moutier</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [HistoricalCode, BfsCode, ValidFrom, Name]\n",
-       "Index: []"
+       "      HistoricalCode  BfsCode   ValidFrom              Name\n",
+       "743            16671     2262  01.01.2026           Gurmels\n",
+       "828            16670     2056  01.01.2026  Fétigny-Ménières\n",
+       "943            16672     2525  01.01.2026      Kriegstetten\n",
+       "1446           16673     4095  01.01.2026             Brugg\n",
+       "2279           16669     6831  01.01.2026           Moutier"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "bafad9f7",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1152,7 @@
        "      <th>0</th>\n",
        "      <td>http://www.w3.org/2001/XMLSchema#integer</td>\n",
        "      <td>literal</td>\n",
-       "      <td>5</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1122,10 +1160,10 @@
       ],
       "text/plain": [
        "                             count.datatype count.type count.value\n",
-       "0  http://www.w3.org/2001/XMLSchema#integer    literal           5"
+       "0  http://www.w3.org/2001/XMLSchema#integer    literal           7"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "0ad1a4fb",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1228,7 @@
        "      <th>0</th>\n",
        "      <td>http://www.w3.org/2001/XMLSchema#integer</td>\n",
        "      <td>literal</td>\n",
-       "      <td>2</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1198,10 +1236,10 @@
       ],
       "text/plain": [
        "                             count.datatype count.type count.value\n",
-       "0  http://www.w3.org/2001/XMLSchema#integer    literal           2"
+       "0  http://www.w3.org/2001/XMLSchema#integer    literal          14"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "d936e9e7",
    "metadata": {},
    "outputs": [],
